--- a/KsheeraSagara/KsheeraSagara/Views/TruckSheetPage.xaml
+++ b/KsheeraSagara/KsheeraSagara/Views/TruckSheetPage.xaml
@@ -3,6 +3,100 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="KsheeraSagara.Views.TruckSheetPage">
+             x:Class="KsheeraSagara.Views.TruckSheetPage" Title="Truck Sheet">
+    
+    <ContentPage.Content>
+
+        <Grid Padding="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+
+            <Label Text="{Binding Path=ToDaysDate,StringFormat='{0:dd-MM-yyyy}'}"
+                   FontSize="Large" Style="{DynamicResource Key=LblStyle}"
+                   HorizontalOptions="Start"/>
+
+            <Label Text="{Binding Path=Session}"
+                   FontSize="Large" Style="{DynamicResource Key=LblStyle}"
+                   HorizontalOptions="End">
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding SessionCommand}"/>
+                </Label.GestureRecognizers>
+            </Label>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="1">
+
+                <Label Text="KMF Weight:"
+                   FontSize="Large" Style="{DynamicResource Key=LblStyle}"
+                   HorizontalOptions="Start"/>
+
+                <Entry Text="{Binding Path=Weight,Mode=TwoWay}"
+                   Keyboard="Numeric" FontSize="Large"
+                   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="2">
+
+                <Label Text="Fat:"
+                   FontSize="Large" Style="{DynamicResource Key=LblStyle}"
+                   HorizontalOptions="Start"/>
+
+                <Entry Text="{Binding Path=Fat,Mode=TwoWay}"
+                   Keyboard="Numeric" FontSize="Large"
+                   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="3">
+
+                <Label Text="SNF:"
+                   FontSize="Large" Style="{DynamicResource Key=LblStyle}"
+                   HorizontalOptions="Start"/>
+
+                <Entry Text="{Binding Path=Snf,Mode=TwoWay}"
+                   Keyboard="Numeric" FontSize="Large"
+                   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="4">
+
+                <Label Text="Price:"
+                   FontSize="Large" Style="{DynamicResource Key=LblStyle}"
+                   HorizontalOptions="Start"/>
+
+                <Entry Text="{Binding Path=Price,Mode=TwoWay}"
+                   Keyboard="Numeric" FontSize="Large"
+                   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Grid.Row="5">
+
+                <Label Text="Amount:"
+                   FontSize="Large" Style="{DynamicResource Key=LblStyle}"
+                   HorizontalOptions="Start"/>
+
+                <Entry Text="{Binding Path=Amount,Mode=TwoWay}"
+                   Keyboard="Numeric" FontSize="Large"
+                   VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+
+            </StackLayout>
+
+            <Button Text="Save" Grid.Row="6"
+                    FontSize="Large"
+                    Command="{Binding SaveCommand}"/>
+
+        </Grid>
+        
+        
+    </ContentPage.Content>
   
 </ContentPage>
