--- a/KsheeraSagara/KsheeraSagara/Views/MembersDisplay.xaml
+++ b/KsheeraSagara/KsheeraSagara/Views/MembersDisplay.xaml
@@ -18,23 +18,23 @@
                     FontSize="Large"
                     Command="{Binding AddNewMemberCommand}"/>
 
-            <ListView Grid.Row="1" ItemsSource="{Binding Path=FcMembers}" 
+            <ListView Grid.Row="1" ItemsSource="{Binding Path=FcMembers}"  SeparatorColor="Gray"
                           VerticalOptions="Fill" HorizontalOptions="Fill" CachingStrategy="RecycleElement"                    
-                      RowHeight="90" BackgroundColor="White">
+                      RowHeight="110" BackgroundColor="White">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Grid Padding="1" BackgroundColor="Gray">
+                            <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1.5*"/>
                                     <ColumnDefinition Width="3.5*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <Image Source="portrait.png" BackgroundColor="White"
-                                       Grid.Row="0" Grid.Column="0" Grid.RowSpan="3"
+                                <Image Source="portrait.png"
+                                       Grid.Column="0"
                                        />
 
-                                <Grid Grid.Column="1" BackgroundColor="White">
+                                <Grid Grid.Column="1" Padding="1">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="1*"/>
                                         <RowDefinition Height="1*"/>
@@ -53,7 +53,7 @@
 
                                     <Label Text="{Binding Path=Name}" Grid.Row="1"
                                         FontSize="Large" Style="{DynamicResource Key=LblStyle}"
-                                        HorizontalTextAlignment="Center"/>
+                                        HorizontalTextAlignment="Start"/>
 
                                     <StackLayout Orientation="Horizontal" Grid.Row="2">
                                         <Label Text="&#x260e; "
